Revised FairMatching to take as input arguments an input file root name and number of files to be used.